--- a/Frontend-Dealsdray/src/Components/create.css
+++ b/Frontend-Dealsdray/src/Components/create.css
@@ -63,4 +63,16 @@ body {
   .submit-btn:hover {
     background-color: #45a049;
   }
+  .image-preview {
+    margin-top: 10px;
+    text-align: center;
+  }
+  
+  .image-preview img {
+    max-width: 200px;
+    max-height: 200px;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+  }
+  
   
