--- a/Frontend-Dealsdray/src/Components/navbar.css
+++ b/Frontend-Dealsdray/src/Components/navbar.css
@@ -29,7 +29,9 @@ body {
     color: #fff;
     font-weight: 600;
   }
-  
+  .admin-name{
+    text-decoration: none;
+  }
   .navbar-right {
     display: flex;
     align-items: center;
